--- a/_posts/2018-01-11-CCT-Docker-2.markdown
+++ b/_posts/2018-01-11-CCT-Docker-2.markdown
@@ -10,19 +10,23 @@ categories: cct
 This time docker supports most platform - Windows, Linux, Mac OS - So Installing it is just straight-forward.
 Download install file from Docker-official website. and follow the instructions. then you are set.
 
-https://www.docker.com/
+* [Docker official web](http://docker.com)
+* [Docker download portal](https://www.docker.com/community-edition)
 
 
 ### Docker Image
+<br />
+In Docker World, In order to make a Container, you need Image.
+<br />
 
-In Docker World, In order to make a Container. you need Image. Container is instance of Image. As in, you make a Object from the Class, in programming world. If you say, Container is Object. then Image is Class.
-So you need to download image to your local machine. In order to do it, there is simple command in terminal.
+Container is instance of Image. As in, you make a Object from the Class, in programming world. Imagine that Container is Object. and Image is Class.
+First fo all, you need to download image to your local machine. In order to do it, there is simple command line in terminal.
 
 {% highlight c %}
 docker pull nginx:1.10.1-alpine
 // docker pull <imageName:tag>
 {% endhighlight %}
 
-Place you can search image is called Docker Hub.
+Place you can search images is called Docker Hub.
 
-https://hub.docker.com/ - Find out what image you want to use and it's versions.
+[Docker Hub](https://hub.docker.com/) - Find out what image you want to use and it's versions.
